Don't keep ip field - it can be coming from different places